Fix nav contents not following on collapse
JS:
- Add transform: translateX(-360px) on nav everytime nav is collapsed
CSS:
- Add transition: 0.3s on nav for smooth collapse transition

--- a/src/style.css
+++ b/src/style.css
@@ -120,10 +120,12 @@ header {
 }
 
 nav {
+    transition: 0.3s;
     grid-area: nav;
     background-color: var(--task-nav-bg-color); 
     color: white;
     padding: 48px;
+    transform: translateX(-20px);
 }
 
 .h2-wrapper {
